# ARDL-NN-For-Macroeconomics-Time-Series

./: .gitignore  DA_Prj1_final_ARDL_FFNN.ipynb  Nhom19_DA.docx  README.md  ardl_ffnn_model.py  cpi_forecast_selected_variables.csv  df_final.csv  experiment_fixed_bak.py  requirements.txt  test.ipynb  vmd_vs_no_vmd_metrics_comparison.csv
vmd_ardl_ffnn/: CLI_OPTIONS.md  PROJECT_REVIEW.md  VMD_EXPERIMENT_FIX_SUMMARY.md  plan.md  pyproject.toml
vmd_ardl_ffnn/results/: ardl_residual_diagnostics_train_only.csv  ardl_residual_diagnostics_train_only_no_vmd.csv  ardl_selected_orders_train_only.csv  ardl_selected_orders_train_only_no_vmd.csv  best_component_models_cached_vmd.csv  best_model_fixed_no_vmd.csv  component_predictions_cached_vmd.csv  ffnn_component_validation_search_cached_vmd.csv  ffnn_validation_search_cached_vmd.csv  ffnn_validation_search_fixed_no_vmd.csv  final_forecasts_fixed_no_vmd.csv  final_metrics_fixed_no_vmd.csv  final_reconstructed_forecasts_cached_vmd.csv  final_reconstructed_metrics_cached_vmd.csv  granger_causality_train_only.csv  input_audit_cached_vmd.csv  input_audit_no_vmd.csv  series_diagnostics_train_only.csv  series_diagnostics_train_only_no_vmd.csv  vmd_vs_no_vmd_forecasts_comparison.csv  vmd_vs_no_vmd_metrics_comparison.csv
vmd_ardl_ffnn/results_export/: ardl_residual_diagnostics_train_only.csv  ardl_residual_diagnostics_train_only_no_vmd.csv  ardl_selected_orders_train_only.csv  ardl_selected_orders_train_only_no_vmd.csv  best_component_models_cached_vmd.csv  best_component_models_cached_vmd_1.csv  best_component_models_cached_vmd_tanh.csv  (+17 more)
(+32 files in other folders)
