[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vmd-ardl-ffnn-reproduction"
version = "0.1.0"
description = "VMD + ARDL order selection + FFNN grid-search forecasting pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "statsmodels>=0.14",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
vmd-ardl-ffnn-run = "vmd_ardl_ffnn.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
